--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -540,15 +540,68 @@ html[data-theme="light"] .menu__link:before {
 } */
 
 .theme-doc-sidebar-menu li:nth-child(2) .menu__link:before {
-  background: url('../img/roadmap.svg') 50% / 1.25rem 1rem;
+  background: url('../img/roadmap2.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
 }
 
 /**getting started**/
 .theme-doc-sidebar-menu li:nth-child(3) .menu__link:before {
-  background: url('../img/rocket.svg') 50% / 1.25rem 1rem;
+  background: url('../img/blockchains.svg') 50% / 1.25rem 2rem;
+  background-repeat: no-repeat;
+}
+
+/**getting started**/
+.theme-doc-sidebar-menu li:nth-child(4) .menu__link:before {
+  background: url('../img/identity2.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.theme-doc-sidebar-menu li:nth-child(5) .menu__link:before {
+  background: url('../img/gradhat2.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.theme-doc-sidebar-menu li:nth-child(6) .menu__link:before {
+  background: url('../img/package.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.theme-doc-sidebar-menu li:nth-child(7) .menu__link:before {
+  background: url('../img/sdks.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
 }
 
 
+.theme-doc-sidebar-menu li:nth-child(8) .menu__link:before {
+  background: url('../img/nodes.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+
+.theme-doc-sidebar-menu li:nth-child(9) .menu__link:before {
+  background: url('../img/filestorage.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.theme-doc-sidebar-menu li:nth-child(10) .menu__link:before {
+  background: url('../img/indexing.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.theme-doc-sidebar-menu li:nth-child(11) .menu__link:before {
+  background: url('../img/notification.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.theme-doc-sidebar-menu li:nth-child(12) .menu__link:before {
+  background: url('../img/links.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
+
+.theme-doc-sidebar-menu li:nth-child(13) .menu__link:before {
+  background: url('../img/layers.svg') 50% / 1.25rem 1rem;
+  background-repeat: no-repeat;
+}
 
 .theme-doc-sidebar-item-link-level-2 > .menu__link {
   margin-left: 1.25rem;
@@ -858,9 +911,8 @@ footer {
   background: url('../img/gps.svg') 50% / 1.25rem 1rem;
 }
 
-/* .theme-doc-sidebar-item-category li:nth-child(4) .menu__link:before {
-  background: url('../img/rocket.svg') 50% / 1.25rem 1rem;
-} */
+
+
 
 .navbar__brand {
   margin: 0;
