Fixed the height of the boxes present on the homepage of the website

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -43,7 +43,8 @@
 }
 
 .listContainer{
-  min-height: 17rem;
+  min-height: 8.8rem;
+  max-height: 295px;
 }
 @media screen and (max-width: 768px) {
   .listContainer{
