Changes the color

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -7,7 +7,7 @@
   padding: 4rem 0;
   text-align: center;
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), #0E121780);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), #000000);
   overflow: hidden;
   color: white;
  }
