Add margin to sidebar menu

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -520,6 +520,7 @@ html[data-theme="light"] .menu__link,
 html[data-theme="light"] .table-of-contents__link,
 html[data-theme="light"] .menu__caret {
   color: #434242 !important;
+  margin-left: 25px;
 }
 
 html[data-theme="dark"] .menu__link,
