--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -869,9 +869,9 @@ p:last-child {
 }
 
 .markdown img {
-  max-width: min(600px, 100%);
-  margin: 0 auto 1.5rem auto;
-  display: block;
+  max-width: min(50px, 100%);
+  margin: 2px auto 2rem;
+  display:inline-block;
   border: 2px solid var(--cabbage60);
 }
 
